[package]
name = "action-pull-request-lock"
version = "2.0.0"
edition = "2021"
authors = ["williamdes"]
description = "GitHub Action to lock a pull-request, written in Rust"
license = "MPL-2.0"
readme = "README.md"
repository = "https://github.com/sudo-bot/action-pull-request-lock"

[[bin]]
name = "action-pull-request-lock"
path = "src/main.rs"

[lib]
name = "action_pull_request_lock"
path = "src/lib.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
# GitHub API client (de-facto standard for Rust)
octocrab = "0.49"
# JSON for the API call
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Error handling
anyhow = "1"
# Async trait support so we can mock the GitHub client in tests
async-trait = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
wiremock = "0.6"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
